[package]
name = "signal-logger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "2.7.2", default-features = false }
odra-casper-livenet-env = { version = "2.7.2", optional = true }

[dev-dependencies]
odra-test = { version = "2.7.2", default-features = false }

[build-dependencies]
odra-build = { version = "2.7.2" }

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["livenet"]

[[bin]]
name = "signal_logger_build_contract"
path = "bin/signal_logger_build_contract.rs"
